[tool.poetry]
name = "unique-image-scan"
version = "0.1.0"
description = "Scans the given paths for images and identify unique images."
authors = ["Your Name <you@example.com>"]
license="BSD"
classifiers=[
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "License :: OSI Approved :: UNLICENSE License",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
unique-image-scan = 'unique_image_scan.cli:main'

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
PyExifTool = "^0.1.1"
progressbar2 = "^3.50.1"
SQLAlchemy = "^1.3.16"
arrow = "^0.15.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ptpython = "*"
flake8 = "^3.7"

[tool.black]
# https://github.com/psf/black#configuration-format
line-length = 132
[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
